# memory_mgmt

./: README.md  build_and_run_tests.sh  meson.build
ch10_refcount/l2_refcounting/: main.c  snekobject.c
ch10_refcount/l3_increment/: main.c  snekobject.c
ch10_refcount/l4_decrement_and_free/: main.c  snekobject.c
ch10_refcount/l5_vectors/: main.c  snekobject.c
ch10_refcount/l6_arrays/: main.c  snekobject.c
ch11_mark_and_sweep/l10_sweep/: main.c  snekobject.c  stack.c  vm.c  vm.h
ch11_mark_and_sweep/l1_cycles/: main.c  snekobject.c
ch11_mark_and_sweep/l2_pros_and_cons/: main.c  vm.c
ch11_mark_and_sweep/l3_stack_frames/: main.c  meson.build  stack.h  vm.c
ch11_mark_and_sweep/l4_tracking_objects/: main.c  meson.build  sneknew.c  snekobject.h  stack.c  stack.h  vm.c
ch11_mark_and_sweep/l5_free/: main.c  meson.build  sneknew.c  sneknew.h  snekobject.c  snekobject.h  stack.c  vm.c  vm.h
ch11_mark_and_sweep/l6_frame_references/: main.c  sneknew.c  snekobject.h  vm.c  vm.h
ch11_mark_and_sweep/l7_mark_and_sweep/: main.c  sneknew.c  snekobject.h  stack.c  stack.h  vm.c
ch11_mark_and_sweep/l8_mark/: main.c  vm.c  vm.h
ch11_mark_and_sweep/l9_trace/: main.c  sneknew.c  snekobject.c  vm.c  vm.h
ch2_structs/l1_structs/: coord.h  main.c  meson.build
ch2_structs/l2_initializers/: coord.c  main.c  meson.build
ch2_structs/l2_struct_array/: main.c  meson.build  my_array_struct.h
ch2_structs/l3_scaling_coordinate/: coord.c  coord.h  main.c  meson.build
ch2_structs/l4_typedef/: main.c  meson.build
ch2_structs/l6_struct_padding/: exercise.h  main.c  meson.build
ch3_pointers/l13_array_decay/: main  main.c
ch3_pointers/l14_c_strings/: exercise.c  main.c  meson.build
ch3_pointers/l15_c_string_library/: exercise.c  exercise.h  main.c  meson.build
ch3_pointers/l17_mutual_structs/: exercise.h  main.c  meson.build
ch3_pointers/l1_memory/: main.c  meson.build
ch3_pointers/l5_why_pointers/: coordinate.h  main.c  meson.build
ch3_pointers/l6_pointer_basics/: exercise.c  exercise.h  main.c  meson.build
ch3_pointers/l8_arrays/: exercise.c  main.c  meson.build
ch4_enums/l1_enums/: color.h  main.c  meson.build
ch4_enums/l2_non_default_values/: main.c
ch4_enums/l3_enum_switch_case/: http.c  main.c  meson.build
ch4_enums/l4_sizeof_enum/: main  main.c
ch5_unions/l1_union/: exercise.c  exercise.h  main.c
ch5_unions/l2_memory_layout/: main  main.c
ch6_stack_heap/l1_the_stack/: main  main.c
ch6_stack_heap/l3_stack_overflow/: main  main.c
ch6_stack_heap/l4_stack_pointers/: main
ch6_stack_heap/l5_the_heap/: exercise.c  main.c
ch6_stack_heap/l6_malloc/: exercise.c  main.c  meson.build
ch6_stack_heap/l7_free/: exercise.c  main  main.c
ch7_advanced_pointers/l1_pointers_pointers/: exercise.c  main.c
ch7_advanced_pointers/l2_array_of_pointers/: exercise.c  main.c
ch7_advanced_pointers/l3_void_pointers/: exercise.c  main.c
ch7_advanced_pointers/l4_swapping_integers/: exercise.c  main.c
ch7_advanced_pointers/l5_swapping_strings/: exercise.c  main.c
ch7_advanced_pointers/l6_generic_swap/: exercise.c  main.c
ch8_stack/l1_low_level_stack/: main.c  snekstack.c  snekstack.h
ch8_stack/l2_stack_push/: main.c  meson.build  snekstack.c  snekstack.h
ch8_stack/l3_stack_pop/: main.c  snekstack.c  snekstack.h
ch8_stack/l4_stack_free/: main.c  snekstack.c  snekstack.h
ch8_stack/l5_danger_push/: exercise.c  main.c
ch8_stack/l6_multiple_types/: exercise.c  exercise.h  main.c  meson.build  snekstack.h
ch9_objects/l1_objects/: main.c  meson.build  snekobject.h
ch9_objects/l2_integers/: meson.build  snekobject.c
ch9_objects/l3_floats/: main.c  meson.build  snekobject.c  snekobject.h
ch9_objects/l4_strings/: main.c  snekobject.c  snekobject.h
ch9_objects/l5_vector3/: main.c  snekobject.c  snekobject.h
ch9_objects/l6_arrays/: main.c  snekobject.c  snekobject.h
ch9_objects/l7_get_and_set/: main.c  snekobject.c  snekobject.h
ch9_objects/l8_length/: main.c  snekobject.c
ch9_objects/l9_manipulating_objects/: main.c  snekobject.c
