project('mem_mgmt_course', 'c')

# Chapter 2 - Structs Tests
#subdir('ch2_structs/l1_structs')
#subdir('ch2_structs/l2_struct_array')
#subdir('ch2_structs/l2_initializers')
#subdir('ch2_structs/l3_scaling_coordinate')
#subdir('ch2_structs/l4_typedef')
#subdir('ch2_structs/l6_struct_padding')

# Chapter 2 - Pointer Tests
subdir('ch3_pointers/l1_memory')
subdir('ch3_pointers/l5_why_pointers')
subdir('ch3_pointers/l6_pointer_basics')
subdir('ch3_pointers/l8_arrays')
subdir('ch3_pointers/l14_c_strings')
subdir('ch3_pointers/l15_c_string_library')