project('mem_mgmt_course', 'c')

# Chapter 2 - Structs Tests
#subdir('ch2_structs/l1_structs')
#subdir('ch2_structs/l2_struct_array')
#subdir('ch2_structs/l2_initializers')
#subdir('ch2_structs/l3_scaling_coordinate')
#subdir('ch2_structs/l4_typedef')
#subdir('ch2_structs/l6_struct_padding')

# Chapter 3 - Pointer Tests
subdir('ch3_pointers/l1_memory')
subdir('ch3_pointers/l5_why_pointers')
subdir('ch3_pointers/l6_pointer_basics')
subdir('ch3_pointers/l8_arrays')
subdir('ch3_pointers/l14_c_strings')
subdir('ch3_pointers/l15_c_string_library')
subdir('ch3_pointers/l17_mutual_structs')

# Chapter 4 - Enums
subdir('ch4_enums/l1_enums')
subdir('ch4_enums/l2_non_default_values')
subdir('ch4_enums/l3_enum_switch_case')

# Chapter 5 - Unions
subdir('ch5_unions/l1_union')

# Chapter 6 - Stack and Heap
subdir('ch6_stack_heap/l5_the_heap')
subdir('ch6_stack_heap/l6_malloc')

# Chapter 7 - Advanced Pointers
subdir('ch7_advanced_pointers/l1_pointers_pointers')
subdir('ch7_advanced_pointers/l2_array_of_pointers')
subdir('ch7_advanced_pointers/l3_void_pointers')
subdir('ch7_advanced_pointers/l4_swapping_integers')
subdir('ch7_advanced_pointers/l5_swapping_strings')
subdir('ch7_advanced_pointers/l6_generic_swap')

# Chapter 8 - Stack
subdir('ch8_stack/l1_low_level_stack')
subdir('ch8_stack/l2_stack_push')
subdir('ch8_stack/l3_stack_pop')
subdir('ch8_stack/l4_stack_free')
subdir('ch8_stack/l5_danger_push')
subdir('ch8_stack/l6_multiple_types')

# Chapter 9 - Objects
subdir('ch9_objects/l1_objects')
subdir('ch9_objects/l2_integers')
subdir('ch9_objects/l3_floats')
subdir('ch9_objects/l4_strings')
subdir('ch9_objects/l5_vector3')
subdir('ch9_objects/l6_arrays')
subdir('ch9_objects/l7_get_and_set')